<resources>
    <string name="app_name">계단왕</string>
    <string name="btn_txt_execute">시작하기</string>
    <string name="btn_txt_login">로그인</string>
    <string name="btn_txt_signup">회원가입 &gt;</string>
    <string name="btn_txt_finspwd">비밀번호 찾기 &gt;</string>
    <string name="btn_txt_finspwd_1">비밀번호 찾기</string>
    <string name="txt_code">계단 고유코드</string>
    <string name="txt_email">이메일</string>
    <string name="txt_pwd">비밀번호(8\-16자)</string>
    <string name="txt_pwd_confirm">비밀번호 확인</string>
    <string name="txt_pwd_current">현재 비밀번호</string>
    <string name="txt_pwd_new">새 비밀번호(8\-16자)</string>
    <string name="txt_pwd_new_confirm">새 비밀번호 확인</string>
    <string name="txt_user_name">이름</string>
    <string name="txt_user_company">회사명</string>
    <string name="txt_user_depart">부서</string>
    <string name="txt_bluetooth_desc">계단왕앱 이용을 위해서는 블루투스를 켜주셔야 합니다.</string>
    <string name="txt_logo_update">로고 파일이 변경되었습니다.</string>
    <string name="txt_logo_delete">로고 파일을 삭제하셨습니다.</string>
    <string name="warn_code_required">ⓘ 계단 고유코드를 입력하세요.</string>
    <string name="warn_code_invalid">ⓘ 계단 고유코드를 확인하세요.</string>
    <string name="warn_addr_required">ⓘ GPS를 활성화 해서 주소를 가져오세요.</string>
    <string name="warn_addr_invalid">ⓘ 주소를 확인하세요.</string>
    <string name="warn_account_invalid">ⓘ 이메일 또는 비밀번호를 다시 확인하세요.</string>
    <string name="warn_search_too_short">ⓘ 검색명을 입력해 주세요.</string>
    <string name="warn_code_too_short">ⓘ 계단 고유코드는 7자리 숫자입니다.</string>
    <string name="warn_build_error">ⓘ 건물을 찾을 수 없습니다.</string>
    <string name="warn_code_error">ⓘ 건물 또는 등산로를 선택해주세요.</string>
    <string name="warn_company_error">ⓘ 회사를 찾을 수 없습니다.</string>
    <string name="warn_depart_error">ⓘ 부서를 찾을 수 없습니다.</string>
    <string name="warn_required_company">ⓘ 회사를 선택해주세요.</string>
    <string name="warn_required_depart">ⓘ 부서를 선택해주세요.</string>
    <string name="warn_email">ⓘ 이메일 주소를 정확히 입력해주세요.</string>
    <string name="warn_phone">ⓘ 연락처를 다시 확인해주세요..</string>
    <string name="warn_password">ⓘ 패스워드는 8\-16글자로 입력해주세요.</string>
    <string name="warn_password_mismatch">ⓘ 패스워드가 일치하지 않습니다.</string>
    <string name="warn_kakao">ⓘ 카카오 로그인에 실패하였습니다.</string>
    <string name="warn_kakao_insufficient">ⓘ 카카오 로그인에 실패하였습니다. (닉네임, 이메일 정보 부족)</string>
    <string name="warn_name">ⓘ 이름을 입력해주세요.</string>
    <string name="warn_input">ⓘ 내용을 입력해주세요.</string>
    <string name="warn_depart">ⓘ 부서를 선택해주세요.</string>
    <string name="warn_provision_agree">ⓘ 이용약관에 동의해주세요.</string>
    <string name="warn_required_nick">ⓘ 닉네임을 입력해주세요.</string>
    <string name="warn_required_check_nick_dupl">ⓘ 닉네임을 중복 검사를 해주세요.</string>
    <string name="warn_required_check_nick_length">ⓘ 닉네임을 20자 이내로 해주세요.</string>
    <string name="warn_available_nick">ⓘ 사용 가능한 닉네임입니다.</string>
    <string name="warn_unavailable_nick">ⓘ 사용할 수 없는 닉네임입니다.</string>
    <string name="warn_not_changed_nick">ⓘ 닉네임이 같습니다.</string>
    <string name="warn_pwd_invalid_current">ⓘ 현재 비밀번호를 8\-16글자로 입력해주세요.</string>
    <string name="warn_pwd_invalid_new">ⓘ 새 비밀번호를 8\-16글자로 입력해주세요.</string>
    <string name="warn_pwd_mismatch_new">ⓘ 새 비밀번호가 일치하지 않습니다.</string>
    <string name="warn_pwd_not_changed">ⓘ 비밀번호가 변경되지 않았습니다.</string>
    <string name="warn_stair_info_not_exists">ⓘ 등록한 계단정보가 없습니다.</string>
    <string name="warn_stair_changed">ⓘ 정보가 전환되었습니다.</string>
    <string name="warn_stair_not_selected">ⓘ 전환할 정보를 선택하세요.</string>
    <string name="warn_stair_not_changed">ⓘ 정보가 전환되지 않았습니다.</string>
    <string name="warn_pwd_changed">비밀번호가 변경되었습니다.</string>
    <string name="warn_building_added">계단 정보가 추가되었습니다.</string>
    <string name="warn_building_added_fail">계단 정보가 추가되지 않았습니다.</string>
    <string name="warn_signup_cafe_fail">카페 가입 신청이 되지 않았습니다.</string>
    <string name="warn_signup_cafe_out_fail">카페 탈퇴가 되지 않았습니다.</string>
    <string name="warn_fails_get_departs">부서정보를 가져오지 못했습니다.</string>
    <string name="warn_cafe_name">카페 이름을 입력해주세요.</string>
    <string name="warn_cafe_desc">카페 설명을 입력해주세요.</string>
    <string name="warn_privacy_not_selected">카페 공개 여부를 선택하세요.</string>
    <string name="txt_provision_agree">이용약관 및 개인정보처리방침을 모두 읽어\n보았으며, 동의하시는 경우 체크하세요.</string>
    <string name="txt_provision_view">이용약관 및 개인정보처리방침 보기 &gt;</string>
    <string name="warn_fail_lookup_nick">닉네임을 조회하지 못했습니다.\n다시 시도해주세요.</string>
    <string name="warn_fail_create_cafe">카페 생성이 되지 않았습니다.\n다시 시도해주세요.</string>
    <string name="warn_fail_save_nick">정보를 저장하지 못했습니다.\n다시 시도해주세요.</string>
    <string name="warn_commu_to_server">서버와 연결이 원활하지 않습니다.</string>
    <string name="warn_company_info_not_found">회사정보를 찾을 수 없습니다.\n현상이 지속되면 관리자에게 문의해주세요.</string>
    <string name="warn_server_not_smooth">서버와 통신이 원활하지 않습니다.\n다시 시도해주세요.</string>
    <string name="warn_signup_fail">회원가입이 진행되지 않았습니다.\n다시 시도해주세요.</string>
    <string name="warn_cafe_fail">카페개설이 진행되지 않았습니다.\n다시 시도해주세요.</string>
    <string name="warn_push_fail">푸시 수신상태가 반영되지 않았습니다.\n다시 시도해주세요.</string>
    <string name="warn_withdraw">회원탈퇴를 하시면 회원님의 모든 데이터는 영구적으로 삭제됩니다.\n\n탈퇴 하시겠습니까?</string>
    <string name="warn_logout">로그아웃 하시겠습니까?</string>
    <string name="warn_withdraw_fail">회원탈퇴가 진행되지 않았습니다.</string>
    <string name="warn_withdraw_finished">회원탈퇴가 완료 되었습니다.</string>
    <string name="warn_bbs_not_exists">공지사항이나 이벤트가 없습니다.</string>
    <string name="warn_keyword_not_input">검색 키워드가 입력되지 않았습니다.</string>
    <string name="warn_cafe_not_exists">검색된 카페가 없습니다.</string>
    <string name="warn_cafe_rank_not_exists">랭킹 정보가 없습니다.</string>
    <string name="warn_cafe_bbs_not_exists">카페 공지사항이 없습니다.</string>
    <string name="warn_cafe_already_join">이미 가입한 카페입니다.</string>
    <string name="warn_cafe_fail_join">카페 가입을 진행하지 못했습니다.\n다시 시도해주세요.</string>
    <string name="warn_cafe_success_join">카페 가입을 완료했습니다.</string>
    <string name="warn_cafe_key_not_inputed">카페키값을 입력해주세요.</string>
    <string name="warn_cafe_key_not_valid">카페키값이 유효하지 않습니다.</string>
    <string name="warn_cafe_fail_bbs_write">게시글 작성을 실패하였습니다.\n다시 시도해주세요.</string>
    <string name="warn_cafe_fail_bbs_edit">게시글 수정을 실패하였습니다.\n다시 시도해주세요.</string>
    <string name="warn_cafe_fail_bbs_delete">게시글 삭제를 실패하였습니다.\n다시 시도해주세요.</string>
    <string name="warn_cafe_fail_notice_edit">공지사항 수정을 실패하였습니다.\n다시 시도해주세요.</string>
    <string name="warn_cafe_fail_notice_write">공지사항 작성을 실패하였습니다.\n다시 시도해주세요.</string>
    <string name="warn_cafe_fail_notice_delete">공지사항 삭제를 실패하였습니다.\n다시 시도해주세요.</string>
    <string name="warn_cafe_fail_category_edit">분류정보 수정을 실패하였습니다.\n다시 시도해주세요.</string>
    <string name="warn_cafe_bbs_content_empty">작성된 내용이 없습니다.</string>
    <string name="warn_cafe_fail_comment_write">댓글 작성을 실패했습니다. \n다시 시도해주세요.</string>
    <string name="warn_cafe_member_fail_kick">회원 강퇴를 실패하였습니다.\n다시 시도해주세요.</string>
    <string name="warn_cafe_out">카페 탈퇴를 실패하였습니다.\n다시 시도해주세요.</string>
    <string name="warn_my_cafe_not_exists">가입한 카페가 없습니다.</string>
    <string name="warn_cafe_fail_info_modify">카페정보 수정을 실패하였습니다.\n다시 시도해주세요.</string>
    <string name="warn_category_delete">분류를 삭제하시면, 분류에 포함된 회원정보도 삭제됩니다.\n\n삭제하시겠습니까?</string>
    <string name="warn_logo_upload_fail">로고 변경을 실패하였습니다.\n다시 시도해주세요.</string>
    <string name="warn_logo_delete_fail">로고 삭제을 실패하였습니다.\n다시 시도해주세요.</string>
    <string name="warn_logo_upload_size">50kb 이하 용량의 이미지만 등록 할 수 있습니다.</string>
    <string name="txt_signup_success">계단왕을 이용해 주셔서 감사합니다.\n지금 추가정보를 입력하고 바로 사용하실 수 있습니다.\n\n또한, 고객님 메일주소[{0}](으)로 인증메일이 발송 되었습니다. 이후 아이디 찾기,\n 비밀번호찾기 등에 유용한 인증메일 승인을 해 두시면 여러모로 편리 합니다.\n\n 물론, 인증하지 않으셔도 사용하시는데에 전혀 지장은 없습니다.\n\n건강한 습관, 계단왕!\n공짜 헬스클럽, 계단왕!\n\n지금 시작 하십시오.</string>
    <string name="txt_signup_extra_success">닉네임과 캐릭터 정보가 저장 되었습니다.\n이메일 인증 후 관리자가 승인해야 \'계단왕\'을 이용하실 수 있습니다.</string>
    <string name="txt_loading">LOADING...</string>
    <string name="txt_processing">처리중입니다.\n잠시만 기다려주세요.</string>
    <string name="txt_find_pass_desc">최초 가입 시 등록했던 이메일을 입력하세요.</string>
    <string name="txt_find_pass_fail">계정을 찾을 수 없습니다.\n이메일을 확인해주세요.</string>
    <string name="txt_find_pass_result">입력하신 메일주소 [{0}](으)로 임시 비밀번호가 발송 되었습니다.\n이메일을 확인해주세요.</string>
    <string name="cafe_list_desc1">가입한 카페를 선택하고\n전환 버튼을 탭하면</string>
    <string name="cafe_list_desc2">관련 정보로 전환됩니다.</string>
    <string name="cafe_create_success">카페가 개설되었습니다.</string>
    <string name="cafe_bbs_success">게시글을 작성하였습니다.</string>
    <string name="cafe_bbs_edit_success">게시글을 수정하였습니다.</string>
    <string name="cafe_bbs_delete_success">게시글을 삭제하였습니다.</string>
    <string name="cafe_comment_success">댓글을 작성하였습니다.</string>
    <string name="cafe_notice_post_success">공지사항을 작성하였습니다.</string>
    <string name="cafe_notice_edit_success">공지사항을 수정하였습니다.</string>
    <string name="cafe_notice_delete_success">공지사항을 삭제하였습니다.</string>
    <string name="cafe_member_kick_success">강퇴되었습니다.</string>
    <string name="cafe_member_kick_myself_success">카페 탈퇴가 정상적으로 완료되었습니다.</string>
    <string name="cafe_open">공개 카페가 되었습니다.</string>
    <string name="cafe_close">비공개 카페가 되었습니다.</string>
    <string name="cafe_info_edit_success">카페정보를 수정하였습니다.</string>
    <string name="cafe_category_edit_success">분류정보를 수정하였습니다.</string>
    <string name="cafe_my_category_update_success">분류정보을 수정하였습니다.</string>
    <string name="help_company_code">도움말 보기 ></string>
    <string name="help_company_code_1">계단 고유코드란?</string>
    <string name="txt_cancel">취소</string>
    <string name="txt_confirm">확인</string>
    <string name="txt_agree">동의</string>
    <string name="txt_yes">예</string>
    <string name="txt_no">아니오</string>
    <string name="txt_start">시작하기</string>
    <string name="txt_change">변경</string>
    <string name="txt_register">등록</string>
    <string name="txt_next">다음</string>
    <string name="txt_switching">전환</string>
    <string name="txt_regist_logo">로고 등록</string>
    <string name="txt_next_1">나중에 작성</string>
    <string name="txt_next_time">다음에</string>
    <string name="txt_previous">이전</string>
    <string name="txt_jump">건너뛰기</string>
    <string name="txt_update">업데이트</string>
    <string name="txt_update_agree">업데이트 동의</string>
    <string name="txt_update_disagree">업데이트 안함</string>
    <string name="txt_settings">설정</string>
    <string name="txt_save">저장하기</string>
    <string name="txt_warn">알림</string>
    <string name="txt_shooting">촬영하기</string>
    <string name="txt_gallery">앨범에서 가져오기</string>
    <string name="txt_remove">삭제하기</string>
    <string name="txt_delete">삭제</string>
    <string name="txt_edit">수정</string>
    <string name="txt_edit_done">수정완료</string>
    <string name="txt_member_unregister">강퇴</string>
    <string name="txt_update_popup_title">계단왕 앱 업데이트 공지</string>
    <string name="txt_update_popup_sub_title">업데이트 상세 내용</string>
    <string name="txt_update_popup_desc">업데이트 하지 않으시면 앱을 사용할 수 없습니다.</string>
    <string name="txt_permission_desc">계당왕 앱 이용을 위해 권한을 허용해주세요.</string>
    <string name="txt_notice">공지∙이벤트</string>
    <string name="txt_help">도움말</string>
    <string name="txt_provision">이용약관 및 개인정보처리방침</string>
    <string name="txt_calorie">칼로리</string>
    <string name="txt_health">건강수명</string>
    <string name="txt_total_floor">전체층수</string>
    <string name="txt_total_walk">전체걸음수</string>
    <string name="txt_floor_per_week">층수</string>
    <string name="txt_walk_per_week">걸음수</string>
    <string name="txt_change_profile">프로필 변경</string>
    <string name="txt_change_pwd">비밀번호 변경</string>
    <string name="txt_goup_building">내가 오른 건물 보기</string>
    <string name="txt_show_stair">등록한 계단 보기</string>
    <string name="txt_push_set">알림허용</string>
    <string name="txt_auto_tracking_set">백그라운드실행허용</string>
    <string name="txt_share_to_friend">친구에게 공유하기</string>
    <string name="txt_app_version">앱버전 {0}</string>
    <string name="txt_logout">로그아웃</string>
    <string name="txt_withdraw">회원탈퇴</string>
    <string name="txt_ranking_private_spinner_0">회사 내 개인랭킹 </string>
    <string name="txt_stair_view_desc">등록한 계단을 선택하고 전환 버튼을 탭하면</string>
    <string name="txt_stair_view_desc_1">모든 화면이 해당 계단으로 전환됩니다.</string>
</resources>