<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title_box"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorBlack">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/txt_show_stair"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/popup_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_14"
            android:src="@drawable/ic_w_close" />
    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:includeFontPadding="false"
            android:text="@string/txt_stair_view_desc"
            android:textAlignment="center"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/color_f75e5e"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:includeFontPadding="false"
            android:text="@string/txt_stair_view_desc_1"
            android:textAlignment="center"
            android:textColor="@color/color_1a1a1a"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:layout_constraintVertical_bias="0.0" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView"
            app:layout_constraintVertical_bias="1.0">

            <kr.co.photointerior.kosw.widget.KoswButton
                android:id="@+id/btn_switching"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="144dp"
                android:layout_height="40dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/button_border_1a1a1a"
                android:text="@string/txt_switching"
                android:textColor="@color/text_btn_click"
                android:textSize="@dimen/sp_14" />

            <kr.co.photointerior.kosw.widget.KoswButton
                android:id="@+id/btn_cancel"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="144dp"
                android:layout_height="40dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/button_border_1a1a1a"
                android:text="@string/txt_cancel"
                android:textColor="@color/text_btn_click"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>


    </android.support.constraint.ConstraintLayout>
</LinearLayout>
